[gd_scene load_steps=6 format=3 uid="uid://hbciu5u16rmg"]

[ext_resource type="Script" path="res://scripts/enemy/enemy_entity.gd" id="1_gw6yp"]
[ext_resource type="Script" path="res://scripts/enemy/detection_area.gd" id="1_mo0da"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_sprite.gd" id="2_j45u6"]
[ext_resource type="Script" path="res://scripts/enemy/collision_area.gd" id="4_7ycnu"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_attack_area.gd" id="5_kpawo"]

[node name="EnemyEntity" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_gw6yp")
texture_path = NodePath("Sprite")
floor_ray_path = NodePath("FloorRay")
animation_path = NodePath("Animation")

[node name="Sprite" type="Sprite2D" parent="."]
script = ExtResource("2_j45u6")
animation_path = NodePath("../Animation")
enemy_path = NodePath("..")
attack_area_collision_path = NodePath("../EnemyAttackArea/Collision")

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_mo0da")
enemy_path = NodePath("..")

[node name="Collision" type="CollisionShape2D" parent="DetectionArea"]

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("4_7ycnu")
health = 10
enemy_path = NodePath("..")

[node name="Collision" type="CollisionShape2D" parent="CollisionArea"]
light_mask = 0
visibility_layer = 4

[node name="Timer" type="Timer" parent="CollisionArea"]

[node name="EnemyAttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("5_kpawo")

[node name="Collision" type="CollisionShape2D" parent="EnemyAttackArea"]

[node name="Animation" type="AnimationPlayer" parent="."]

[node name="FloorRay" type="RayCast2D" parent="."]

[connection signal="body_entered" from="DetectionArea" to="DetectionArea" method="_on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="DetectionArea" method="_on_body_exited"]
[connection signal="area_entered" from="CollisionArea" to="CollisionArea" method="_on_collision_area_entered"]
[connection signal="animation_finished" from="Animation" to="Sprite" method="_on_animation_finished"]
